--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -1,62 +1,128 @@
-#search_filters {
-    @media (max-width: 767px) {
-        padding: 20px 0!important;
-    }
-    #filtre-name {
-        text-align: center;
-        font-size: 1.2em;
-        p {
-            position: relative;
+@import "global.scss";
 
-            .filtre-sr {
-                position: relative;
-                top: -5px;
+.container {
+    #left-column {
+        @media (min-width: 768px) {
+            float: left;
+            position: sticky;
+            top: 0;
+            height: 100%;
+        }
+        
+        #search_filters {
+            @media (max-width: 767px) {
+                padding: 20px 0!important;
+            }
+            #filtre-name {
+                text-align: center;
+                font-size: 1.2em;
+                p {
+                    position: relative;
+        
+                    .filtre-sr {
+                        position: relative;
+                        top: -5px;
+                    }
+                }
+            }
+            .show-filtre {
+                display: none;
+            }
+            .facet {
+                .facet-title {
+                    overflow: visible;
+                }
             }
         }
     }
-    .show-filtre {
-        display: none;
-    }
-    .facet {
-        .facet-title {
-            overflow: visible;
-        }
+    .categories {
+        float: right;
     }
 }
+    
 
-#facet_section {
-    input[type="checkbox"] {
-        display: none;
-    }
-    label {
-        margin-bottom: 0;
-        border: none;
-        position: relative;
-        text-align: left;
-        width: 100%;
-        display: block;
-    }
-    label:hover {
-        cursor: pointer;
-    }
-    .form-check-filtre {
-        &:first-child {
-            margin-bottom: 10px;
-        }
-    }
-    .form-checked {
-        background-color: #eee;
-        padding: 5px;
-    }
-    .checked+label:after {
-        content: "";
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        right: 5px;
-        background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/OOjs_UI_icon_check-constructive.svg/1200px-OOjs_UI_icon_check-constructive.svg.png);
-        background-size: 100%;
-        pointer-events: none;
-    }
-}
+// #facet_section {
+//     .form-check-filtre {
+//         position: relative;
+//         &:first-child {
+//             margin-bottom: 10px;
+//         }
+//         input[type="checkbox"] {
+//             position: absolute;
+//             left: 0;
+//             opacity: 0.01;
+//         }
+//         label {
+//             margin-bottom: 0;
+//             border: none;
+//             position: relative;
+//             text-align: left;
+//             width: 100%;
+//             display: inline;
+//             padding-left: 2.3em;
+    
+//             &:hover {
+//                 cursor: pointer;
+//             }
+    
+//         }
+//         [type="checkbox"] + label {
+//             position: relative;
+//             padding-left: 2.3em;
+//             font-size: 1.05em;
+//             line-height: 1.7;
+//             cursor: pointer; 
+//         }
+
+//         [type="checkbox"]:not(:checked) + label::before,
+//         [type="checkbox"]:checked + label::before {
+//             content: '';
+//             position: absolute;
+//             left: 0;
+//             top: 0;
+//             width: 1.4em;
+//             height: 1.4em;
+//             border: 1px solid #aaa;
+//             background: #FFF;
+//             border-radius: .2em;
+//             box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 rgba(203, 34, 237, .2);
+//             transition: all .275s;
+//         }
+
+//         [type="checkbox"]:not(:checked) + label::after,
+//         [type="checkbox"]:checked + label::after {
+//             content: '';
+//             position: absolute;
+//             top: .38em;
+//             left: .18em;
+//             font-size: 1.6em;
+//             color: #CB22ED;
+//             line-height: 0;
+//             // transition: all .2s; /* Petite transition */
+//         }
+        
+        
+//     }
+    
+    
+//     // .checked+label:after {
+//     //     content: "";
+//     //     display: inline-block;
+//     //     width: 20px;
+//     //     height: 20px;
+//     //     position: absolute;
+//     //     right: 5px;
+//     //     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/OOjs_UI_icon_check-constructive.svg/1200px-OOjs_UI_icon_check-constructive.svg.png);
+//     //     background-size: 100%;
+//     //     pointer-events: none;
+//     // }
+// }
+
+// input:checked + label {
+//     color: red;
+// }
+
+// /* Content à afficher en after du label (contenu à rajouter) */
+// input:checked + label::after {
+//     content: "CHECKÉÉÉÉÉÉÉÉÉÉ";
+// }
