--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -1,3 +1,5 @@
+@import "global.scss";
+
 #main {
     .cart-grid {
         .cart-grid-body{
@@ -36,6 +38,7 @@
                                 }
 
                                 .bootstrap-touchspin {
+                                    box-shadow: inherit;
                                     @media (max-width: 768px) {
                                         width:100%;
                                         border: 1px solid rgba(0, 0, 0, .25);
@@ -66,6 +69,9 @@
                 .cart-detailed-actions {
                     > div {
                         text-align: center;
+                        a {
+                            @include button;
+                        }
                     }
                 }
             }
