--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -1,3 +1,5 @@
+@import "global.scss";
+
 .block-category {
     position: relative;
     padding: unset;
@@ -33,14 +35,14 @@
         float: right;
         margin-bottom: 5px;
         span {
-            color: #464646;
+            color: #232323;
         }
         span:hover {
             color: #000;
-            border: 1px solid #464646;
+            border: 1px solid #232323;
         }
         .active {
-            border: 1px solid #464646;
+            border: 1px solid #232323;
         }
     }
     button:focus {
