--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,6 +2,11 @@ $black: #000;
 $white: #fff;
 $hover: #232323;
 $grey: #ccc;
+$greyblack: #232323;
+$blue: #82b8ec;
+
+$alegreya : 'AlegreyaSans';
+$roboto: 'RobotoMono'; 
 @mixin title {
     font-family: RobotoMono;
     font-size: 13px;
@@ -10,4 +15,9 @@ $grey: #ccc;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 1rem;
+}
+@mixin button {
+    height: 40px;
+    line-height: inherit;
+    background-color: $blue!important;
 }
