--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -77,7 +77,7 @@
                         justify-content: space-between;
                         li {
                             font-family: 'AlegreyaSans';
-                            font-size: 14px;
+                            font-size: 16px;
                             &:not(:last-child) {
                                 margin-right: 10px;
                                 display: block;
@@ -88,7 +88,7 @@
                                 padding: 0;
                                 font-weight: 400;
                                 font-family: 'AlegreyaSans';
-                                font-size: 14px;
+                                font-size: 16px;
                             }
                         }
                     }
@@ -114,6 +114,15 @@
                         position: absolute;
                         right: 0;
                         top: 65px;
+
+                        #_desktop_cart {
+                            .cart-preview.active{
+                                background: $white;
+                                a {
+                                    color: $black;
+                                }
+                            }
+                        }
                     }
                     #_desktop_logo {
                         img {
