--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -53,6 +53,9 @@
                             }
                             a {
                                 height: 100%;
+                                &:hover {
+                                    opacity: 0.7;
+                                }
                                 img {
                                     max-width: 373.328px;
                                     max-height: 373.328px;
@@ -62,22 +65,28 @@
                                 z-index: 0;
                                 width: 100%;
                                 bottom: auto;
+                                border-left: 1px solid $black;
+                                padding-left: 10px;
                                 h3 {
                                     text-align: left;
-                                    border-left: 1px solid $black;
-                                    padding-left: 5px;
                                     text-transform: lowercase;
+                                    border-left: 0;
+                                    padding:0;
                                     a {
                                         font-size: 24px;
                                     }
                                 }
-                                .product-subtitle {
+                                #product-subtitle {
+                                    margin: 5px 0 15px 0;
                                     p {
                                         margin: 0;
+                                        color: #232323;
+                                        font-size: 15px;
+                                        font-family: $alegreya;
                                     }
                                 }
                                 .recipe {
-                                    font-family: RobotoMono;
+                                    font-family: 'RobotoMono';
                                     text-decoration: underline;
                                     text-transform: uppercase;
                                     font-size: 12px;
@@ -99,6 +108,11 @@
                                     @media (max-width: 960px) {
                                         bottom: -55px;
                                     }
+
+                                    .price {
+                                        font-family: 'RobotoMono';
+                                        font-size: 13px;
+                                    }
                                 }
                             }
                             .highlighted-informations {
@@ -114,6 +128,21 @@
                     margin-top: 40px;
                     @media (max-width: 480px) {
                         display: block;
+                    }
+                }
+            }
+        }
+        #products {
+            #js-product-list {
+                .row {
+                    .product-miniature {
+                        .product-description {
+                            border-left: 1px solid $black;
+
+                            #product-subtitle {
+                                padding-left: 5px;
+                            }
+                        }
                     }
                 }
             }
