--- a/assets/scss/log.scss
+++ b/assets/scss/log.scss
@@ -1,56 +1,116 @@
 @import "global.scss";
 
-.login-form {
+#checkout{
+    header {
+        .header-nav {
+            margin-top:0;
+        }
+    }
+    .login-form {
+        form {
+            section {
+                position: relative;
+                .form-group:nth-child(3) {
+                    margin-bottom: 0;
+                }
+                .forgot-password {
+                    @media (min-width: 768px) {
+                        position: absolute;
+                        left: 160px;
+                    }
+                }
+            }
+            footer {
+                text-align: center;
+                @media (min-width: 768px) {
+                    margin-top: 50px;
+                }
+                
+            }
+        }
+    }
+
+    // #wrapper {
+    //     .container {
+    //         #main {
+    //             .card-block {
+    //                 .register-form {
+                        
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
+
     form {
         section {
-            position: relative;
-            .form-group:nth-child(3) {
-                margin-bottom: 0;
-            }
-            .forgot-password {
-                @media (min-width: 768px) {
-                    position: absolute;
-                    left: 160px;
+            .form-group:first-child {
+                .form-control-valign {
+                    .radio-inline {
+                        &:first-child {
+                            margin-right: 20px;
+
+                        }
+
+                        span {
+                            margin-right: 3px;
+                        }
+                    }
                 }
+            }
+            .btn[data-action=show-password] {
+                @include button;
+                height: 100%;
+                line-height: initial;
+            }
+            .form-group:nth-child(8),
+            .form-group:nth-child(9) {
+                display: none;
             }
         }
         footer {
-            text-align: center;
-            @media (min-width: 768px) {
-                margin-top: 50px;
+            button {
+                @include button;
             }
-            
         }
     }
 }
 
-// #wrapper {
-//     .container {
-//         #main {
-//             .card-block {
-//                 .register-form {
-                    
-//                 }
-//             }
-//         }
-//     }
-// }
+.cart-grid-body {
+    .checkout-step {
+        button {
+            @include button;
+        }
+    }
 
-form {
-    section {
-        .form-group:first-child {
-            .form-control-valign {
-                .radio-inline {
-                    &:first-child {
-                        margin-right: 20px;
-
-                    }
-
-                    span {
-                        margin-right: 3px;
+    #checkout-addresses-step {
+        .content {
+            #delivery-addresses {
+                .radio-block {
+                    padding: 10px;
+                    .address-alias {
+                        margin-bottom: 0;
+                        margin-left: 10px;
                     }
                 }
             }
         }
     }
 }
+
+.cart-grid-right {
+    #js-checkout-summary {
+        .cart-summary-products {
+            p {
+                a {
+                    position: relative;
+                    i {
+                        position: absolute;
+                        bottom: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
