--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -7582,7 +7582,6 @@ textarea:active:-moz-placeholder {
     width: auto;
     float: left;
     display: inline-block;
-    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, .2)
 }
 
 .bootstrap-touchspin input:focus {
@@ -9679,7 +9678,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-accessories .product-title,
 .product-miniature .product-title {
     text-align: left;
-    border-left: 1px solid #000;
     padding-left: 5px;
     text-transform: lowercase;
     margin-top: .7rem
@@ -10459,7 +10457,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 
 #product #content {
     position: relative;
-    max-width: 452px;
     margin: 0 auto
 }
 
@@ -12487,12 +12484,12 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 #header .header-nav .cart-preview.active {
-    background: #464646
+    background: #fff
 }
 
 #header .header-nav .cart-preview.active a,
 #header .header-nav .cart-preview.active i {
-    color: #fff
+    color: #000
 }
 
 #header .header-nav .cart-preview .shopping-cart {
@@ -12505,7 +12502,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 #header .header-nav .blockcart {
-    background: #f1f1f1;
     height: 3rem;
     padding: .75rem;
     margin-left: .9375rem;
@@ -12521,8 +12517,9 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     color: #232323
 }
 
-#header .header-nav .blockcart.active a:hover {
-    color: #fff
+#header .header-nav .blockcart.active a:hover,
+#_desktop_user_info .user-info:hover {
+    color: #232323;
 }
 
 #header .header-nav .blockcart .header {
@@ -12951,7 +12948,6 @@ input[type=number]::-webkit-outer-spin-button {
     }
 }
 
-#header .header-nav .cart-preview.active:hover,
 .btn-primary.active,
 .btn-primary.focus,
 .btn-primary:hover {
