--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,7 +115,7 @@
         right: 100px;
     }
     #header .header-nav .row .mobile #_mobile_logo a img {
-        margin-left: 50px;
+        max-height: 120px;
     }
 }
 
