--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -64,7 +64,7 @@
                             .product-description {
                                 z-index: 0;
                                 width: 100%;
-                                bottom: auto;
+                                bottom: 2px;
                                 border-left: 1px solid $black;
                                 padding-left: 10px;
                                 h3 {
