--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -55,7 +55,7 @@
                         width: 300px;
                         position: absolute;
                         right: 0;
-                        top: 0;
+                        top: -35px;
                     }
                 }
                 .header-bottom {
