--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12469,7 +12469,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 
 #header .header-nav .user-info {
     margin-left: 2.5rem;
-    margin-top: 1.1rem;
+    margin-top: .9375rem;
     text-align: right;
     white-space: nowrap
 }
