--- a/assets/scss/bentos.scss
+++ b/assets/scss/bentos.scss
@@ -16,6 +16,7 @@
                     .category-cover {
                         img {
                             width: 100%;
+                            height: 100%;
                         }
                     }
                 }
