--- a/assets/scss/categorie-grid.scss
+++ b/assets/scss/categorie-grid.scss
@@ -49,6 +49,7 @@
 .featured-block-title span {
     padding-bottom: 6px;
     border-bottom: 2px solid #000;
+    letter-spacing: 1px;
 }
 
 .categories-preview {
