--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -3,10 +3,12 @@ $white: #fff;
 $hover: #232323;
 $grey: #ccc;
 $greyblack: #232323;
+$greylight: #464646;
 $blue: #82b8ec;
 
 $alegreya : 'AlegreyaSans';
 $roboto: 'RobotoMono'; 
+$unna: 'Unna';
 @mixin title {
     font-family: RobotoMono;
     font-size: 13px;
