--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -33,7 +33,7 @@
     #header {
         .header-nav {
             max-height: 100%;
-            margin-top: 50px;
+            margin-top: 60px;
             border: none;
             .row {
                 display: flex;
@@ -56,6 +56,12 @@
                         position: absolute;
                         right: 0;
                         top: -35px;
+
+                        #_desktop_cart {
+                            .header {
+                                margin-top: 0;
+                            }
+                        }
                     }
                 }
                 .header-bottom {
@@ -78,17 +84,25 @@
                         li {
                             font-family: 'AlegreyaSans';
                             font-size: 16px;
+
+                            &#category-79:target {
+                                color: #f9992f;
+                            }
                             &:not(:last-child) {
                                 margin-right: 10px;
                                 display: block;
                             }
                             a {
                                 text-transform: none;
-                                letter-spacing: 1px;
+                                letter-spacing: 0.5px;
                                 padding: 0;
                                 font-weight: 400;
                                 font-family: 'AlegreyaSans';
                                 font-size: 16px;
+
+                                &.active {
+                                    color: red;
+                                }
                             }
                         }
                     }
@@ -119,7 +133,7 @@
                                 background: $white;
                                 a {
                                     color: $black;
-                                }
+                                } 
                             }
                         }
                     }
@@ -145,9 +159,12 @@
                         a {
                             img {
                                 margin-top: 2rem;
+                                width: auto;
+                                height: auto;
                                 @media (max-width: 768px) {
                                     margin-left: 1rem;
                                     max-width: 50%;
+                                    height: auto;
                                 }
                             }
                         }
