--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -436,7 +436,7 @@ textarea {
 
 .icon-panier-off:before {
     content: "\e901";
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .icon-favoris-off:before {
@@ -445,7 +445,7 @@ textarea {
 
 .icon-compte-off:before {
     content: "\e903";
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .icon-poubelle-on .path1:before {
@@ -9579,7 +9579,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     .product-accessories .products,
     .product-miniature .products {
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 20px;
+        grid-gap: 60px;
     }
 }
 
@@ -12469,9 +12469,10 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 
 #header .header-nav .user-info {
     margin-left: 2.5rem;
-    margin-top: .9375rem;
+    margin-top: 1rem;
     text-align: right;
-    white-space: nowrap
+    white-space: nowrap;
+    font-size:12px;
 }
 
 #header .header-nav .user-info .account {
