--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -755,7 +755,7 @@
     text-align: center;
     text-transform: uppercase !important;
     font-size: 11px;
-    font-family: RobotoMono Medium;
+    font-family: RobotoMono;
     margin-bottom: 20px;
 }
 
