--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -278,14 +278,6 @@ textarea {
 }
 
 @font-face {
-    font-family: AlegreyaSans Medium;
-    src: url(../fonts/AlegreyaSans-Medium.ttf) format("truetype");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
     font-family: Unna;
     src: url(../fonts/Unna-Regular.ttf) format("truetype");
     font-weight: 400;
@@ -293,35 +285,12 @@ textarea {
     font-display: swap;
 }
 
-@font-face {
-    font-family: Unna Bold;
-    src: url(../fonts/Unna-Bold.ttf) format("truetype");
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: Unna Bold Italic;
-    src: url(../fonts/Unna-BoldItalic.ttf) format("truetype");
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
-}
 
 @font-face {
     font-family: RobotoMono;
     src: url(../fonts/RobotoMono-Regular.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: RobotoMono Medium;
-    src: url(../fonts/RobotoMono-Medium.ttf) format("truetype");
-    font-weight: 400;
-    font-style: medium;
     font-display: swap;
 }
 
@@ -506,7 +475,7 @@ textarea {
 }
 
 .font3 {
-    font-family: 'RobotoMono Medium';
+    font-family: 'RobotoMono';
     font-weight: unset;
     font-size: 11px;
     letter-spacing: 1.3px;
@@ -7383,7 +7352,7 @@ a:hover {
     text-transform: uppercase;
     font-weight: 600;
     padding: .5rem 1.25rem;
-    font-family: RobotoMono Medium;
+    font-family: RobotoMono;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 11px
@@ -10101,7 +10070,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 #search_filters .facet .facet-title,
 #search_filters_brands .facet .facet-title,
 #search_filters_suppliers .facet .facet-title {
-    font-family: 'RobotoMono Medium';
+    font-family: 'RobotoMono';
     font-size: 1em;
     color: #000;
 }
