--- a/assets/scss/bentos.scss
+++ b/assets/scss/bentos.scss
@@ -21,6 +21,14 @@
                     }
                 }
 
+                #category-description {
+                    .col-md-8 {
+                        img {
+                            max-width: 412.89px;
+                        }
+                    }   
+                }
+
                 .page-home {
                     #custom-text {
                         #custom-text-container {
