--- a/assets/scss/log.scss
+++ b/assets/scss/log.scss
@@ -117,6 +117,14 @@
 
 /*Information*/
 
+.my-account {
+    img {
+        max-width: 1160px!important;
+        max-height: 369.03px!important;
+    }
+}
+
+
 .info-blocs {
     position: relative;
 
