uppercase code promo + add contact.scss

--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -66,3 +66,15 @@
         }
     }
 }
+
+.block-promo {
+    #promo-code {
+        form {
+            button {
+                span {
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+}
