log + img footer

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -114,7 +114,7 @@
                 margin: 0 auto;
                 img {
                     height: 30px;
-                    width: 52px;
+                    width: auto;
                 }
             }
         .block-title {
