--- a/assets/scss/log.scss
+++ b/assets/scss/log.scss
@@ -1,5 +1,6 @@
 @import "global.scss";
-#checkout {
+#checkout,
+.card {
     header {
         .header-nav {
             margin-top: 0;
@@ -9,8 +10,13 @@
         form {
             section {
                 position: relative;
+
                 .form-group:nth-child(3) {
                     margin-bottom: 0;
+
+                    button {
+                        width: 100%;
+                    }
                 }
                 .forgot-password {
                     @media (min-width: 768px) {
@@ -27,16 +33,7 @@
             }
         }
     }
-    // #wrapper {
-    //     .container {
-    //         #main {
-    //             .card-block {
-    //                 .register-form {
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
+
     form {
         section {
             .form-group:first-child {
