--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -72,6 +72,10 @@
                                     padding:0;
                                     a {
                                         font-size: 24px;
+
+                                        &:hover {
+                                            color: $black;
+                                        }
                                     }
                                 }
                                 #product-subtitle {
