--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -17,6 +17,10 @@
             overflow: hidden;
         }
     }
+
+    @media (max-width: 480px) {
+        padding-left:0;
+    }
     font-size: 14px;
     .info-detailed-title {
         position: relative;
