--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -18,8 +18,8 @@
         }
     }
 
-    @media (max-width: 480px) {
-        padding-left:0;
+    @media screen and (max-width: 480px) {
+        padding-left: 0;
     }
     font-size: 14px;
     .info-detailed-title {
