--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -135,7 +135,7 @@
             bottom: auto!important;
             @media (max-width: 768px) {
                 p {
-                    padding-left: 15px;
+                    padding-left: 15px!important;
                 }
             }
 
